test/compilable/imports/checkimports3b.d
module imports.checkimports3b;
private void foo(int) {}
