test/fail_compilation/imports/a5770.d
module imports.a5770;

struct S
{
private:
    this(int n) {}
    this(A...)(A args) {}
}
